fixed terminal output to be more clear